--- a/legoguess.html
+++ b/legoguess.html
@@ -30,7 +30,7 @@
                 The second circle is the setcount of the minifigure you guessed, yellow is too many sets compared to the
                 answer, red is too little, and green is correct
                 <br>
-                The third circle is the difference in name length of the minifigures, yellow is close to the lenght, red
+                The third circle is the difference in name length of the minifigures, yellow is close to the length, red
                 is far off, and green is the correct length
                 <br>
                 The fourth circle is the release year of a set the minifigure you guessed is in, yellow is too recent
