--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>Welcome to my website (WIP)</head>
     <body>
-        <a href="legoguess.html">Lego Minifigure guessing game "Minifigured"</a>
+        <a href="legoguess.html">Lego Minifigure guessing game</a>
+        <a href="nfcdemo.html">Web NFC demo"</a>
     </body>
 </html>
