--- a/nfcread.html
+++ b/nfcread.html
@@ -25,7 +25,7 @@
                 });
                 reader.addEventListener("reading", function({message, serialNumber}){
                     document.getElementById("output").textContent=serialNumber;
-                    document.getElementById("outputr").textContent=message.records.toString();
+                    document.getElementById("outputr").textContent=message.records.data;
                     document.getElementById("output1").textContent=message.records.getPayload();
                     document.getElementById("output2").textContent=message.records.payload;
                     document.getElementById("output3").textContent=message.records.RTD_TEXT;
