--- a/nfcread.html
+++ b/nfcread.html
@@ -24,7 +24,7 @@
                         text+="Type: "+ record.recordType;
                         text+="MIME type: "+ record.mediaType;
                         text+="ID"+ record.id;
-                        text+="<br>";
+                        text+=" ";
                     }
                     document.getElementById("outputr").textContent=text;
                 });
